# loopclosing

./: CMakeLists.txt  README.md  childusing  package.xml  plugin_description.xml
cfg/: Map.cfg
cmake/: FindG2O.cmake
config/: extrinsic1.yaml  extrinsic2.yaml  extrinsic3.yaml  extrinsic4.yaml  fisheye.ini
graph_back/: graph_slam.cpp  graph_slam.h
include/g2o/: edge_se3_plane.hpp
include/loam_velodyne/: LaserMapping.h  LaserOdometry.h  LaserSubMapping.h  MultiScanRegistration.h  ScanRegistration.h  TransformMaintenance.h  edge_se3_plane.h  floordetection.h  graph_slam.h  information_matrix_calculator.hpp  keyframe.hpp  keyframe.hpp.autosave  keyframeupdate.h  loop_detector.hpp  loop_detector_pcl.hpp  map_cloud_generator.h  mapinfoupdatesrv.h  multi_thread_backend_optimization.h  multi_thread_backend_optimization.h.autosave  pointcloudimage.h  registrations.hpp  utility.h  windowoptim.h
include/rviz_plugion/: mapinfoupdatesrv.h
launch/: Untitled Document  loam_debug.launch  loam_loopclosure.launch  loam_velodyne.launch
msg/: VectorOdometry.msg
rviz_cfg/: loam_loop.rviz  loam_velodyne.rviz
src/: backend_optimization_node.cpp  featureAssociation.cpp  floor_detection_node.cpp  imageProjection.cpp  laser_image_node.cpp  laser_submapping_node.cpp  mapOptmization.cpp  save_map_node.cpp  transformFusion.cpp  windowoptim_node.cpp
src/lib/: CMakeLists.txt  LaserMapping.cpp  LaserOdometry.cpp  MultiScanRegistration.cpp  ScanRegistration.cpp  floordetection.cpp  graph_slam.cpp  information_matrix_calculator.cpp  lasersubmapping.cpp  mapinfoupdatesrv.cpp  math_utils.h  multi_thread_backend_optimization.cpp  multi_thread_backend_optimization.cpp.autosave  pointcloudimage.cpp  registrations.cpp  windowoptim.cpp
src/rviz_plugion/: mapinfoupdatesrv.cpp
srv/: ChildToMaster.srv  GlobalMap.srv
tests/: register_test.cpp
