add_library(loam
            math_utils.h
            ScanRegistration.cpp
            MultiScanRegistration.cpp
            LaserOdometry.cpp
            LaserMapping.cpp
            TransformMaintenance.cpp
            floordetection.cpp
            information_matrix_calculator.cpp
            graph_slam.cpp
            registrations.cpp
            multi_thread_backend_optimization.cpp
            windowoptim.cpp
            pointcloudimage.cpp)
target_link_libraries(loam
    ${catkin_LIBRARIES}
    ${PCL_LIBRARIES}
    ${G2O_TYPES_DATA}
    ${G2O_CORE_LIBRARY}
    ${G2O_STUFF_LIBRARY}
    ${G2O_SOLVER_PCG}
    ${G2O_SOLVER_CSPARSE}
    ${G2O_TYPES_SLAM3D}
    ${G2O_TYPES_SLAM3D_ADDONS}
    ${OpenCV_LIBRARIES})
